@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fa">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title> راهنمای کاربری نت سفید نسخه 2.2 </title>
+    <title> راهنمای کاربری نت سفید نسخه 2.3 </title>
     <style>
         body {
             font-family: Tahoma, Geneva, sans-serif;
@@ -292,7 +292,8 @@
             <li> Previous Staff یا حامل قبل: با انتخاب این گزینه  یا فشردن دکمه "جهت نمای بالا"، مکان نما در میزان جاری به حامل قبل خواهد رفت. توجه داشته باشید که در سازهایی که دو دستی هستند، مانند پیانو، حامل اول دست راست و حامل دوم دست چپ خواهد بود. در صورتی که حامل دیگری وجود نداشته باشد، با پخش صدای هشداری اعلام می شود که حامل دیگری در این جهت وجود ندارد. </li>
             <li> Next Voice یا صدای بعد: با انتخاب این گزینه  یا فشردن دکمه های "Alt + جهت نمای پایین"، مکان نما در حامل و میزان جاری به صدای  بعد خواهد رفت. توجه داشته باشید که این فرمان در صورتی عمل خواهد کرد که صدای دیگری در حامل و میزان جاری وجود داشته باشد. در این صورت با پخش یک صدا اعلام می شود که، مکان نما به صدای دیگری منتقل شد. حتی اگر آن صدا در تمام میزان جاری و در میزانهای بعدی سکوت داشته باشد، مکان نما به آن صدا منتقل می شود، اما اعلام خواهد کرد که از چه میزانی آن صدا را مجددا باید نواخت. </li>
             <li> Previous Voice یا صدای قبل: با انتخاب این گزینه  یا فشردن دکمه های "Alt + جهت نمای بالا"، مکان نما در حامل و میزان جاری به صدای  قبل خواهد رفت. توجه داشته باشید که این فرمان در صورتی عمل خواهد کرد که صدای دیگری در حامل و میزان جاری وجود داشته باشد. در این صورت با پخش یک صدا اعلام می شود که مکان نما به صدای دیگری منتقل شد. حتی اگر آن صدا در تمام میزان جاری و در میزانهای بعدی سکوت داشته باشد، مکان نما به آن صدا منتقل می شود، اما اعلام خواهد کرد که از چه میزانی آن صدا را مجددا باید نواخت. </li>
-            <li> Show signature یا نمایش نشان های سرخط: با انتخاب این گزینه  یا فشردن دکمه های "CTRL + H"، در حامل و میزان و صدای جاری به طور موقت کلید، میزان نما، سر کلید و شماره صدای جاری افزوده می شود. پس از عبور از این میزان این عبارات اضافی به طور خودکار حذف می شود. اجرای این فرمان با پخش یک صدا همراه است که، بیانگر افزودن نشانه های سرخط است. </li>
+            <li> Show Signature Text یا نمایش نشان های سرخط: با انتخاب این گزینه  یا فشردن دکمه های "CTRL + H"، در حامل و میزان و صدای جاری به طور موقت کلید، میزان نما، سر کلید و شماره صدای جاری افزوده می شود. پس از عبور از این میزان این عبارات اضافی به طور خودکار حذف می شود. اجرای این فرمان با پخش یک صدا همراه است که، بیانگر افزودن نشانه های سرخط است. </li>
+            <li> Lock Voice یا قفل کردن صدا: با زدن دکمه CTRL + L یا انتخاب این گزینه، دیگر صدا و staff تغییر نخواهد کرد و در صورتی که بخواهید دوباره به حالت عادی برگردید، باید صدا را از حالت قفل شده خارج کنید.</li>
         </ul>
 
         <a id="8.3."> </a>
@@ -328,6 +329,8 @@
             <li> Change Page Size یا تغییر اندازه صفحه: با انتخاب این گزینه، یک پنجره محاوره ای باز خواهد شد که می توان در آن تعداد میزانی را که هر صفحه نمایش خواهد داد، تعیین کرد. </li>
             <li> Language یا زبان: این گزینه حاوی زیرمنوهای تنظیمات زبان می باشد. در حال حاضر نت سفید زبانهای انگلیسی و پارسی را پشتیبانی می کند. با انتخاب هر یک از این زبانها، نتها به زبان انتخاب شده نمایش می یابند. توجه داشته باشید که با انتخاب زبان های راست به چپ مانند پارسی برخی کلیدهای پیمایش نتها تغییر می کنند. برای اطلاعات بیشتر بخش <a href="#4."> 4. کلیدهای میانبر </a> را مطالعه کنید. </li>
             <li> Show Detailed Text یا متن با جزئیات: با انتخاب یا عدم انتخاب این گزیه، میزان جزئیات گفته شده در متن تغییر می یابد</li>
+            <li> Default Library Path یا انتخاب مسیر پیشفرض کتابخانه: با این گزینه می توانید محل نگهداری پیش فرض فایلهای نت خود را انتخاب کنید. در صورتی که این مسیر انتخاب شده باشد، می توانید فایلهای درون این مسیر را از طریق command line بدون مشخص کردن مسیر باز کنید.</li>
+            <li> Select Measure Text یا انتخاب متن میزان: در صورتی که این گزینه انتخاب شده باشد بعد از تغییر هر میزان، کل متن آن انتخاب می شود. این گزینه ممکن است به برنامه متن خوان شما کمک کند.</li>
         </ul>
 
         <a id="8.6."> </a>
@@ -657,7 +660,8 @@
                     <li> Previous Staff: By choosing this menu (or pressing Up Arrow) you can move to the previous staff. You will receive different alert sounds based on the availability of the previous staff. </li>
                     <li> Next Voice: By choosing this menu (or pressing "ALT + Down Arrow") you can move to the next voice. You will receive different alert sounds based on the availability of the next voice. </li>
                     <li> Previous Voice: By choosing this menu (or pressing "ALT + Up Arrow") you can move to the previous voice. You will receive different alert sounds based on the availability of the previous voice. </li>
-                    <li> Show signature: : By choosing this menu (or pressing "CTRL + H") signature texts of current measure or temporarily added to it. </li>
+                    <li> Show Signature Text: : By choosing this menu (or pressing "CTRL + H") signature texts of current measure or temporarily added to it. </li>
+                    <li> Lock Voice: By choosing this menu (or pressing "CTRL + L") the voice and staff get locked and won't change accidentally. To change them you need to unlock them (using the same menu or key).</li>
                 </ul>
 
                 <a id="E8.3."> </a>
@@ -693,6 +697,8 @@
                     <li> Navigational Sound Alerts: If you uncheck this menu, navigational sound alerts will not be played. </li>
                     <li> Change Page Size: You can select the number of measures that compose one page. </li>
                     <li> Language: You can select WhiteNote's language here. Currently WhiteNote supports English and Persian. </li>
+                    <li> Default Library Path: You can select a difault path (directory) for your library of music xml files. If selected, you won't need to specify path for these files anymore.</li>
+                    <li> Select Measure Text: If you select this option, after changing current measure, it's whole text gets selected. You can use this option if it helps your TTS program.</li>
                 </ul>
 
                 <a id="E8.6."> </a>
