@@ -133,17 +133,17 @@ BEGIN
     END
     POPUP "&Options"
     BEGIN
-        MENUITEM "&Always Show Signatures",     ID_OPTIONS_ALWAYSSHOWSIGNATURES
+        MENUITEM "Always Show &Signatures",     ID_OPTIONS_ALWAYSSHOWSIGNATURES
         MENUITEM "Show &Detailed Text",         ID_OPTIONS_DETAILEDTEXT
-        MENUITEM "&Navigational Sound Alerts",  ID_OPTIONS_BEEPONCOMMANDS
+        MENUITEM "Navigational Sound &Alerts",  ID_OPTIONS_BEEPONCOMMANDS
         MENUITEM "Change &Page Size",           ID_SETTINGS_CHANGE_PAGE_SIZE
-        POPUP "&Language"
+        POPUP "Language"
         BEGIN
             MENUITEM "&English",                    ID_SETTINGS_LANGUAGE_ENGLISH
             MENUITEM "&Persian",                    ID_SETTINGS_LANGUAGE_FARSI
         END
-        MENUITEM "Set Default &XML Path...",    ID_OPTIONS_SETDEFAULTXMLPATH
-        MENUITEM "&Select Measure Text",        ID_OPTIONS_SELECTFULLMEASURE
+        MENUITEM "Default &Library Path...",    ID_OPTIONS_SETDEFAULTXMLPATH
+        MENUITEM "Select &Measure Text",        ID_OPTIONS_SELECTFULLMEASURE
     END
     POPUP "&View"
     BEGIN
@@ -256,6 +256,20 @@ BEGIN
     PUSHBUTTON      "No, and don't remind for one month.",IDC_NO_DONT_REMIND_SOON,78,108,162,14
 END
 
+IDD_TEXTOUTPUTOPTIONS DIALOGEX 0, 0, 233, 100
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Text Output Options"
+FONT 8, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    CONTROL         "First all voices of each measure, then next measure.",IDC_VOICES_FIRST,
+                    "Button",BS_AUTORADIOBUTTON,6,6,222,10
+    CONTROL         "First all measures of each voice, then each voice.",IDC_MEASURES_FIRST,
+                    "Button",BS_AUTORADIOBUTTON,6,18,222,10
+    CONTROL         "Repeat signature texts.",IDC_REPEAT_SIGNATURES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,222,12
+    DEFPUSHBUTTON   "OK",IDOK,120,78,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,174,78,50,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -263,8 +277,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,3,1,0
- PRODUCTVERSION 2,3,1,0
+ FILEVERSION 2,3,2,0
+ PRODUCTVERSION 2,3,2,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -281,12 +295,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Rama"
             VALUE "FileDescription", "WhiteNote"
-            VALUE "FileVersion", "2.3.1.0"
+            VALUE "FileVersion", "2.3.2.0"
             VALUE "InternalName", "WhiteNote.exe"
             VALUE "LegalCopyright", "This is a free and open source software."
             VALUE "OriginalFilename", "WhiteNote.exe"
             VALUE "ProductName", "WhiteNote"
-            VALUE "ProductVersion", "2.3.1.0"
+            VALUE "ProductVersion", "2.3.2.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -351,6 +365,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 123
     END
+
+    IDD_TEXTOUTPUTOPTIONS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 226
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 93
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -371,6 +393,11 @@ BEGIN
 END
 
 IDD_LILYPONDINSTALLER AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_TEXTOUTPUTOPTIONS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
